# neurapilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  analytics_dashboard.py  api.py  config.py  docker-compose.yml  fix_and_run.sh  pyproject.toml  requirements.txt  run.py  storage.py  ui_streamlit.py  viz_arch_diagram.py  viz_pipeline.py
.chroma/5400ea19-6efb-4d28-8384-0ec98cd7c1ba/: index_metadata.pickle
.chroma/6e6c32f5-af70-4fe2-8427-1e79b893112d/: index_metadata.pickle
.chroma/8524c3a5-47c0-497a-bdd0-c46743ac6e7f/: index_metadata.pickle
.chroma/c9149d90-286a-4db3-8dcb-5807d2d80a52/: index_metadata.pickle
.chroma/ea8213aa-b3ec-429e-8dab-908affe4176c/: index_metadata.pickle
.data/: courses.json  neurapilot.db
agents/: __init__.py
core/: __init__.py  db.py  semantic_cache.py  telemetry.py
evaluation/: metrics.py
neurapilot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rag/: __init__.py  agent_graph.py  ingest.py  llm.py  prompts.py  rag.py  rewrite.py  store.py
scripts/: benchmark_eval.py
tests/: test_core.py
