[project]
name = "neurapilot"
version = "1.0.0"
description = "NeuraPilot — Production-grade agentic RAG tutor with compound AI pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NeuraPilot Team"}
]
keywords = ["rag", "llm", "tutor", "agentic-ai", "langgraph", "education"]

[tool.setuptools.packages.find]
where = ["."]
include = ["neurapilot*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
